# ChangePointDoctor

./: .gitignore  README.md
.beads/: issues.jsonl  tree-state.json
.github/scripts/: benchmark_gate.py  schema_gate.py  soak_metrics_gate.py
.github/scripts/tests/: test_benchmark_gate.py  test_schema_gate.py  test_soak_metrics_gate.py
.github/workflows/: benchmark-gate.yml  nightly-quality.yml  pr-checks.yml  release.yml  wheel-build.yml  wheel-smoke.yml
cpd/: VERSIONING.md
cpd/benchmarks/: online_soak_thresholds.v1.json
cpd/crates/cpd-bench/: Cargo.toml
cpd/crates/cpd-core/: Cargo.toml  build.rs
cpd/crates/cpd-doctor/: Cargo.toml
cpd/crates/cpd-offline/: Cargo.toml
cpd/crates/cpd-offline/fuzz/: Cargo.toml
cpd/crates/cpd-offline/fuzz/fuzz_targets/: pelt_no_panic.rs
cpd/crates/cpd-online/: Cargo.toml
cpd/crates/cpd-preprocess/: Cargo.toml
cpd/crates/cpd-python/: Cargo.toml
cpd/docs/: benchmark_slos.md  clean_room_policy.md  fuzzing.md  multivariate_v1.md  online_bocpd_perf_slos.md  parity_bocpd_bayesian.md  parity_ruptures.md  reproducibility_modes.md  result_json_contract.md
cpd/fuzz/: Cargo.toml
cpd/fuzz/fuzz_targets/: common.rs  cost_segment_cost_no_panic.rs  numpy_interop_no_panic.rs  offline_detectors_no_panic.rs  online_bocpd_update_no_panic.rs  online_checkpoint_deserialize_no_panic.rs  timeseries_view_no_panic.rs
cpd/python/: QUICKSTART.md  README.md  RELEASING.md  pyproject.toml
cpd/python/changepoint_doctor/: __init__.py  __init__.pyi
docs/: changelog.md
docs/api-reference/: diagnostics.md  result-types.md
(+91 files in other folders)
