[package]
name = "cpd-offline-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
cpd-core = { path = "../../cpd-core" }
cpd-costs = { path = "../../cpd-costs" }
cpd-offline = { path = ".." }

[[bin]]
name = "pelt_no_panic"
path = "fuzz_targets/pelt_no_panic.rs"
test = false
doc = false
bench = false

[workspace]
members = []
